--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.10",
+    "@nestjs/microservices": "^10.2.10",
     "@nestjs/platform-express": "^10.0.0",
+    "aws-sdk": "^2.1518.0",
+    "joi": "^17.11.0",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
