Added log service

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ KAFKA_BROKER=example
 KAFKA_TOPIC=example
 KAFKA_CLIENT_ID=example
 KAFKA_CONSUMER_GROUP_ID=example
+LOGS_OUTPUT_FOLDER=./logs
+LOGS_FILE_NAME=.logs
