--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "kafkajs": "^2.2.4",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
