--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ KAFKA_CLIENT_ID=example
 KAFKA_CONSUMER_GROUP_ID=example
 LOGS_OUTPUT_FOLDER=./logs
 LOGS_FILE_NAME=.logs
+MONGODB_URI=example
+S3_BUCKET_NAME=example
+AWS_REGION=example
+AWS_ACCESS_KEY_ID=example
+AWS_SECRET_ACCESS_KEY=example
