--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/microservices": "^10.2.10",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/mongodb": "^4.0.7",
     "aws-sdk": "^2.1518.0",
     "joi": "^17.11.0",
     "kafkajs": "^2.2.4",
