--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ LOGS_OUTPUT_FOLDER=./logs
 LOGS_FILE_NAME=.logs
 MONGODB_URL=example
 S3_BUCKET_NAME=example
+S3_HASH_SECRET=example
 AWS_REGION=example
 AWS_ACCESS_KEY_ID=example
 AWS_SECRET_ACCESS_KEY=example
