--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aws-sdk": "^2.1518.0",
     "joi": "^17.11.0",
     "kafkajs": "^2.2.4",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -74,5 +75,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "_moduleAliases": {
+    "@app"    : "src/app",
+    "@domain" : "src/domain",
+    "@config" : "src/config",
+    "@infrastructure"  : "src/infrastructure"
   }
 }
